<resources>
    <string name="app_name">快聊</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="clear">清空</string>
    <string name="shop_cart">购物车</string>
    <string name="delete">删除</string>
    <string name="label_test">测试</string>
    <string name="contacts">联系人</string>
    <string name="personal">个人</string>

    <string name="login_by_phone">使用手机号登录</string>
    <string name="country_and_area">国家和地区</string>
    <string name="country_china">中国</string>
    <string name="login_hint_phone">你的手机号码</string>
    <string name="login_hint_password">填写密码</string>
    <string name="login_meet_problem">登录遇到问题？</string>
    <string name="account">账号</string>
    <string name="login">登录</string>
    <string name="logging_in">正在登录</string>
    <string name="username_or_password_error">账号或密码错误，请重新填写。</string>
    <string name="register">注册</string>
    <string name="register_hint">没有账号？注册一个</string>
    <string name="register_title_phone">填写手机号</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_example">例如：陈晨</string>
    <string name="password">密码</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="password_rules">密码必须是8-16位的数字、字符组合(不能是纯数字)</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>

    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>

    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>

    <string name="album">相册</string>
    <string name="collect">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_holder">卡包</string>
    <string name="setting">设置</string>
    <string name="switch_notification">接收新消息通知</string>
    <string name="switch_sound">声音</string>
    <string name="switch_vibrate">震动</string>
    <string name="switch_speaker">使用扬声器播放语音</string>

    <string name="personal_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="wx_id">微信号</string>
    <string name="qr_code">二维码名片</string>
    <string name="my_address">我的地址</string>
    <string name="sex">性别</string>
    <string name="region">地区</string>
    <string name="my_sign">个性签名</string>

    <string name="saving">正在保存</string>
    <string name="wx_id_or_phone">微信号/手机号</string>
    <string name="new_friends">新的朋友</string>
    <string name="add_friends">添加朋友</string>
    <string name="discover">发现</string>
</resources>
